# signalgrid

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: track_via_api.py  watchlist.yaml
signalgrid/: __init__.py  cli.py  config.py  models.py  pipeline.py  scoring.py  storage.py
signalgrid/connectors/: __init__.py  base.py  domain.py  github.py  greenhouse.py  hackernews.py
tests/: test_models.py  test_pipeline.py  test_scoring.py
