[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalgrid"
version = "0.1.0"
description = "Track real-world signals about companies and founders from GitHub, domain registries, Hacker News, and job boards."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hidden Labs", email = "hello.hiddenlabs@outlook.com" }]
keywords = ["signals", "research", "startup-discovery", "osint", "due-diligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "responses>=0.25", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
signalgrid = "signalgrid.cli:main"

[project.urls]
Homepage = "https://github.com/hidden-labs/signalgrid"
Issues = "https://github.com/hidden-labs/signalgrid/issues"

[tool.setuptools.packages.find]
include = ["signalgrid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
